@startuml

skinparam componentStyle uml2

package "'ClientService' Aggregate" <<Rectangle>> {
	class ClientService <<(A,#fffab8) Aggregate Root>> {
		String status
		ClientServiceId id
		ServiceNumberId serviceNumberId
		ExamRequestId[0..1] examRequestId
		BloodDrawStatus bloodDrawStatus
	}
	class ClientServiceId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class BloodDrawStatus <<(V,DarkSeaGreen) Value Object>> {
		boolean isWaiting
		int positionQueue
	}
}
ClientService --> BloodDrawStatus : bloodDrawStatus
ClientService --> ClientServiceId : id


@enduml
